[package]
name = "math_library"
version = "1.2.1"
edition = "2024"
authors = ["bunicutapescari69 <vmihaelamariana@gmail.com>"]
description = "A math library"
license = "Unlicense"
keywords = ["math", "arithmetic"]
categories = ["mathematics"]
repository = "https://github.com/SDEdward/math_library"
exclude =["target/*"]
documentation = "https://docs.rs/math_library"

[profile.dev]
incremental = false

[profile.release]
incremental = false

[dependencies]
