[package]
name = "math_library"
version = "1.2.2"
edition = "2024"
authors = ["bunicutapescari69 <vmihaelamariana@gmail.com>", "Edward <edwardstrowaway@gmail.com>"]
description = "A simple math library"
license = "Unlicense"
keywords = ["math", "arithmetic", "math_lib", "mathemetics", "algebra"]
categories = ["mathematics"]
repository = "https://github.com/SDEdward/math_library"
exclude =["target/*"]
documentation = "https://docs.rs/math_library"
readme = "../README.md"

[dependencies]